--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/cfc12692bd.js" crossorigin="anonymous"></script>
     <title>Earth Travel</title>
 </head>
 
@@ -22,13 +23,25 @@
                 <li><a href="">Contact</a></li>
             </ul>
 
-
-
-
         </nav>
     </header>
     <main>
-        <section class="bannar-section">
+        <section class="banner-section">
+            <div class="">
+                <h1 class="banner-title">Explore Your Travel</h1>
+                <p class="banner-sit">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna
+                    eu
+                    phasellus.</p>
+                <div class="outer">
+                    <form class="banner-form">
+                        <input type="text" placeholder="Where go" name="" id="">
+                        <input type="text" placeholder="When" name="" id="">
+                        <input type="text" placeholder="Select Type ">
+                        <button class="btn-primary find"><i class="fa-solid fa-magnifying-glass"></i>FindNow</button>
+                    </form>
+                </div>
+            </div>
+
 
         </section>
     </main>
