--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 
                     </div>
                     <h1 class="hotel-title">Handpicked Hotels</h1>
-                    <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                        Libero commodo
                         sagittis dignissim
                         adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
 
@@ -155,7 +156,8 @@
 
                     </div>
                     <h1 class="hotel-title">World Class Service</h1>
-                    <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                        Libero commodo
                         sagittis dignissim
                         adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
 
@@ -167,7 +169,8 @@
 
                 </div>
                 <h1 class="hotel-title">Best Price Guarantee</h1>
-                <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                    Libero commodo
                     sagittis dignissim
                     adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
 
@@ -191,10 +194,23 @@
         <!-- A Simple Perfect Place To Get Lost section  -->
         <section class="place-section">
             <div class="place-content">
-                <h1>A Simple Perfect Place To Get Lost</h1>
+                <h1 class="place-title">A Simple Perfect Place To Get Lost</h1>
+                <p class="place-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim
+                    adipiscing quis.</p>
+                <ul class="place-list">
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                </ul>
+
+                <button class="see-more">See More</button>
 
             </div>
             <div class="place-image">
+                <img src="Images/Group 40089.png" alt="">
+                <div class="center">Watch Our Mountain in Bangladesh</div>
 
             </div>
 
