added newslatter section uploaded

--- a/index.html
+++ b/index.html
@@ -215,6 +215,33 @@
             </div>
 
         </section>
+
+        <!-- Newsletter section  -->
+        <section class="newsletter">
+            <div class="newsletter-content">
+                <h1 class="news-title">Newsletter</h1>
+                <p class="news-pera">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <form class="news-form">
+                        <input type="text" placeholder="Enter your name" name="" id="">
+                        <br>
+                        <input type="email" placeholder="Enter your email" name="" id="">
+                    
+                </form>
+                <button class="subscribe">Subscribe</button>
+
+            </div>
+            <div class="newsletter-bgimg">
+                <button class="save-button-border">
+                    <div class="save-button">
+                        <h6 class="btnsix-title">Travel.com</h6>
+                        <h1 class="btnone-title">Save up to 70%</h1>
+                    </div>
+                </button>
+
+            </div>
+
+        </section>
     </main>
 
 </body>
