footer section added

--- a/index.html
+++ b/index.html
@@ -244,6 +244,27 @@
         </section>
     </main>
 
+    <!-- footer Earth travel  -->
+    <footer class="earth-footer">
+        <div class="footer-content">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
+        </div>
+        <p class="footer-pera">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas
+        vitae elementum ultricies nullam.</p>
+
+        <div class="footer-icons">
+            <i class="fa-brands fa-twitter"> </i>
+            <i class="fa-brands fa-facebook-f"> </i>
+            <i class="fa-brands fa-instagram"> </i>
+            <i class="fa-brands fa-github"> </i>
+        </div>
+        <!-- icone  -->
+        <hr class="hr-line">
+        <p class="rights">2017, All Rights Reserved</p>
+
+    </footer>
+
 </body>
 
 </html>
