banner section responsive

--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
 </head>
 
 <body>
-    <header>
-        <nav class="earth-navbar">
+    <header class="">
+        <nav class="navbar-header">
+            <div class="nav-container">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
 
-            <img class="img-logo" src="Images/Group 40071 (2).png" alt="">
-            <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
-            <ul>
-                <li><a class="text-primary" href="">Home</a></li>
-                <li><a href="">Packages</a></li>
-                <li><a href="">Testimonial</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
+            </div>
+            <div class="items-container">
+                    <a href=""><span class="text-primary">Home</span></a>
+                    <a href="">Pckages</a>
+                    <a href="">Testimonial</a>
+                    <a href="">Blog</a>
+                    <a href="">Contact</a>
+
+            </div>
 
         </nav>
     </header>
+
+    <!-- banner section  -->
     <main>
         <section class="banner-section">
             <div class="">
@@ -37,9 +42,9 @@
                     <form class="banner-form">
                         <input type="text" placeholder="Where go" name="" id="">
                         <input type="text" placeholder="When" name="" id="">
-                        <input type="text" placeholder="Select Type ">
-                        <button class="btn-primary find"><i class="fa-solid fa-magnifying-glass"></i>FindNow</button>
+                        <input type="text" placeholder="Select Type">
                     </form>
+                    <button class="find"><span class="find-icon"><i class="fa-solid fa-magnifying-glass"></i></span> Find Now</button>
                 </div>
             </div>
 
@@ -97,7 +102,7 @@
             <div class="rowtwo">
                 <div class="secondrwo-one">
                     <img src="Images/Rectangle 6.png" alt="">
-                    <div class="center">Srilanka</div>
+                    <div class="centers">Srilanka</div>
 
                 </div>
                 <div class="secondrwo-two">
@@ -195,7 +200,8 @@
         <section class="place-section">
             <div class="place-content">
                 <h1 class="place-title">A Simple Perfect Place To Get Lost</h1>
-                <p class="place-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                <p class="place-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                    Libero commodo
                     sagittis dignissim
                     adipiscing quis.</p>
                 <ul class="place-list">
@@ -223,10 +229,10 @@
                 <p class="news-pera">Get your daily dose of travel news & tips. Sign up today!</p>
                 <hr>
                 <form class="news-form">
-                        <input type="text" placeholder="Enter your name" name="" id="">
-                        <br>
-                        <input type="email" placeholder="Enter your email" name="" id="">
-                    
+                    <input type="text" placeholder="Enter your name" name="" id="">
+                    <br>
+                    <input type="email" placeholder="Enter your email" name="" id="">
+
                 </form>
                 <button class="subscribe">Subscribe</button>
 
@@ -250,8 +256,9 @@
             <img src="Images/Group 40071 (2).png" alt="">
             <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
         </div>
-        <p class="footer-pera">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas
-        vitae elementum ultricies nullam.</p>
+        <p class="footer-pera">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
+            potenti vulputate. Leo erat maecenas
+            vitae elementum ultricies nullam.</p>
 
         <div class="footer-icons">
             <i class="fa-brands fa-twitter"> </i>
