a simple place get lost section responsive

--- a/index.html
+++ b/index.html
@@ -157,8 +157,6 @@
                 <div class="service">
                     <div class="hotel-img">
                         <i class="fa-solid fa-map-location"></i>
-
-
                     </div>
                     <h1 class="hotel-title">World Class Service</h1>
                     <p class="hotel-pera">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
@@ -192,7 +190,7 @@
 
         <!-- See All Package button section  -->
         <div>
-            <button class="btn-primary">See All Package</button>
+            <button class="see-button">See All Package</button>
         </div>
 
 
