--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <footer class="earth-footer">
         <div class="footer-content">
             <img src="Images/Group 40071 (2).png" alt="">
-            <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
+            <h1 class="earth-title footer-titlle">Earth <span class="text-primary">Travel</span></h1>
         </div>
         <p class="footer-pera">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
             potenti vulputate. Leo erat maecenas
