complete responsive website

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <nav class="navbar-header">
             <div class="nav-container">
                 <img src="Images/Group 40071 (2).png" alt="">
-                <h1 class="earth-title">Earth <span class="text-primary">Travel</span></h1>
+                <h1 class="earth-title">Earth <span class="text-primary trv">Travel</span></h1>
 
             </div>
             <div class="items-container">
-                    <a href=""><span class="text-primary">Home</span></a>
-                    <a href="">Pckages</a>
-                    <a href="">Testimonial</a>
-                    <a href="">Blog</a>
-                    <a href="">Contact</a>
+                <a href=""><span class="text-primary">Home</span></a>
+                <a href="">Pckages</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
 
             </div>
 
@@ -39,12 +39,15 @@
                     eu
                     phasellus.</p>
                 <div class="outer">
-                    <form class="banner-form">
-                        <input type="text" placeholder="Where go" name="" id="">
-                        <input type="text" placeholder="When" name="" id="">
-                        <input type="text" placeholder="Select Type">
-                    </form>
-                    <button class="find"><span class="find-icon"><i class="fa-solid fa-magnifying-glass"></i></span> Find Now</button>
+                    
+                    <button class="find-btn-emt">Where go</button>
+
+                    <button class="find-btn-emr ">When<i class="fa-solid fa-angle-down"></i></button>
+
+                    <button class="find-btn-emr">Select Type <i class="fa-solid fa-angle-down"></i></button>
+
+                    <button class="find"><span class="find-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        Find Now</button>
                 </div>
             </div>
 
@@ -137,7 +140,7 @@
 
         <section class="choose-us">
             <h1 class="destination-title">Why Choose Us</h1>
-            <p class="choose-pera ">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+            <p class="choose-pera">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
                 Sodales dictumst nec nibh
                 pellentesque.</p>
 
@@ -185,6 +188,64 @@
         <!-- Deals & Discounts section  -->
 
         <section class="discount">
+            <h1 class="destination-title">Deals & Discounts</h1>
+            <p class="choose-pera ">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                Sodales dictumst nec nibh
+                pellentesque.</p>
+            <div class="deals-imagesection">
+                <div class="deals-tour-pul">
+                    <div class="discount-title">
+
+                        <div class="tour-times">
+                            <p><span class="icone-bg"><i class="fa-regular fa-clock"></i></span> 7 Day / 6 Night</p>
+                            <p><span class="icone-bg"><i class="fa-solid fa-people-group"></i></span> Max : 10</p>
+                            <p><span class="icone-bg"><i class="fa-solid fa-location-dot"></i></span> Malaysia</p>
+                        </div>
+                        <h3 class="hotel-title">Tour To Satorini</h3>
+                        <p class="hotel-pera">Amet consectetur. Vulputate commodo felis
+                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h4 class="price">Price: $1300-$1500</h4>
+                        <button class="btn-book">Book Now</button>
+                    </div>
+
+                </div>
+                <div class="deals-tour-bench">
+                    <div class="discount-title-bench ">
+
+                        <div class="tour-times">
+                            <p><span class="icone-bg"><i class="fa-regular fa-clock"></i></span> 7 Day / 6 Night</p>
+                            <p><span class="icone-bg"><i class="fa-solid fa-people-group"></i></span> Max : 10</p>
+                            <p><span class="icone-bg"><i class="fa-solid fa-location-dot"></i></span> Malaysia</p>
+                        </div>
+                        <h3 class="hotel-title">Tour To Satorini</h3>
+                        <p class="hotel-pera">Amet consectetur. Vulputate commodo felis
+                            molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h4 class="price">Price: $1300-$1500</h4>
+                        <button class="btn-book">Book Now</button>
+                    </div>
+
+                </div>
+                <div class="deals-tour-sata"">
+                    <div class=" discount-title">
+
+                    <div class="tour-times">
+                        <p><span class="icone-bg"><i class="fa-regular fa-clock"></i></span> 7 Day / 6 Night</p>
+                        <p><span class="icone-bg"><i class="fa-solid fa-people-group"></i></span> Max : 10</p>
+                        <p><span class="icone-bg"><i class="fa-solid fa-location-dot"></i></span> Malaysia</p>
+                    </div>
+                    <h3 class="hotel-title">Tour To Satorini</h3>
+                    <p class="hotel-pera">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h4 class="price">Price: $1300-$1500</h4>
+                    <button class="btn-book">Book Now</button>
+                </div>
+
+            </div>
+            </div>
+
 
         </section>
 
